@@ -1,3 +1,9 @@
+globus-gssapi-gsi (13.5-2+gt6.@distro@) @distro@; urgency=low
+
+  * Fix dbg package
+
+ -- Globus Toolkit <support@globus.org>  Tue, 20 Feb 2018 16:18:03 -0500
+
 globus-gssapi-gsi (13.5-1+gt6.@distro@) @distro@; urgency=low
 
   * don't check uid on win
